# torch-training-script

./: .gitignore  COCO_EVALUATION_EXPLANATION.md  CONVERT_MODEL_README.md  README.md  TRANSFER_LEARNING.md  compare_metrics.py  compare_quantized.py  convert_model.sh  convert_to_onnx.py  evaluate_onnx.py  evaluate_stitched.py  pyproject.toml  quantize_onnx.py  requirements.txt
.github/workflows/: publish-onnx-vision-service.yaml
configs/: eval.yaml  sweep.yaml  train.yaml
configs/dataset/: jsonl.yaml
configs/model/: faster_rcnn.yaml  fcos.yaml  retinanet.yaml  ssdlite.yaml
configs/optimization_results/: faster_rcnn.yaml  ssdlite.yaml
src/: eval.py  eval_sweep.py  train.py  visualize.py
src/datasets/: viam_dataset.py
src/models/: faster_rcnn_detector.py  fcos_detector.py  retinanet_detector.py  ssdlite_detector.py
src/onnx_vision_service/: Makefile  README.md  build.sh  main.py  meta.json  onnx_vision_service.py  setup.sh  utils.py
src/utils/: coco_converter.py  coco_eval.py  freeze.py  lr_scheduler.py  model_ema.py  seed.py  transforms.py
